--- a/src/D2RLaunch/D2RLaunch/Culture/Resources.en.resx
+++ b/src/D2RLaunch/D2RLaunch/Culture/Resources.en.resx
@@ -390,7 +390,7 @@
     <comment>Mod files are current...no update needed!</comment>
   </data>
   <data name="ModUpdateRdy" xml:space="preserve">
-    <value>Mod Update Available!\n\nWould you like to make a backup of your mod folder before updating?</value>
+    <value>Mod Update Available!\n\nWould you like to make a backup of this mod before updating?</value>
     <comment>Mod Update Available!\n\nWould you like to make a backup of your mod folder before updating?</comment>
   </data>
   <data name="MonsterStatsDisplay" xml:space="preserve">
