--- a/src/D2RLaunch/D2RLaunch/Culture/Resources.es-MX.resx
+++ b/src/D2RLaunch/D2RLaunch/Culture/Resources.es-MX.resx
@@ -390,7 +390,7 @@
     <comment>Mod files are current...no update needed!</comment>
   </data>
   <data name="ModUpdateRdy" xml:space="preserve">
-    <value>¡Actualización de mod disponible!\n\n¿Te gustaría hacer una copia de seguridad de tu carpeta de mods antes de actualizar?</value>
+    <value>¡Actualización de mod disponible!\n\n¿Te gustaría hacer una copia de seguridad de este mod antes de actualizar?</value>
     <comment>Mod Update Available!\n\nWould you like to make a backup of your mod folder before updating?</comment>
   </data>
   <data name="MonsterStatsDisplay" xml:space="preserve">
