--- a/src/D2RLaunch/D2RLaunch/Culture/Resources.fr.resx
+++ b/src/D2RLaunch/D2RLaunch/Culture/Resources.fr.resx
@@ -390,7 +390,7 @@
     <comment>Mod files are current...no update needed!</comment>
   </data>
   <data name="ModUpdateRdy" xml:space="preserve">
-    <value>Mise à jour du mod disponible !\n\nVoulez-vous faire une sauvegarde de votre dossier mod avant la mise à jour ?</value>
+    <value>Mise à jour du mod disponible !\n\nVoulez-vous faire une sauvegarde de ce mod avant la mise à jour ?</value>
     <comment>Mod Update Available!\n\nWould you like to make a backup of your mod folder before updating?</comment>
   </data>
   <data name="MonsterStatsDisplay" xml:space="preserve">
