--- a/src/D2RLaunch/D2RLaunch/Culture/Resources.it.resx
+++ b/src/D2RLaunch/D2RLaunch/Culture/Resources.it.resx
@@ -390,7 +390,7 @@
     <comment>Mod files are current...no update needed!</comment>
   </data>
   <data name="ModUpdateRdy" xml:space="preserve">
-    <value>Aggiornamento mod disponibile!\n\nVuoi fare un backup della cartella mod prima dell'aggiornamento?</value>
+    <value>Aggiornamento mod disponibile!\n\nVuoi fare un backup di questo mod prima dell'aggiornamento?</value>
     <comment>Mod Update Available!\n\nWould you like to make a backup of your mod folder before updating?</comment>
   </data>
   <data name="MonsterStatsDisplay" xml:space="preserve">
