--- a/src/D2RLaunch/D2RLaunch/Culture/Resources.pl.resx
+++ b/src/D2RLaunch/D2RLaunch/Culture/Resources.pl.resx
@@ -390,7 +390,7 @@
     <comment>Mod files are current...no update needed!</comment>
   </data>
   <data name="ModUpdateRdy" xml:space="preserve">
-    <value>Dostępna jest aktualizacja modów!\n\nCzy chcesz wykonać kopię zapasową folderu modów przed aktualizacją?</value>
+    <value>Dostępna jest aktualizacja moda!\n\nCzy chcesz wykonać kopię zapasową tego moda przed aktualizacją?</value>
     <comment>Mod Update Available!\n\nWould you like to make a backup of your mod folder before updating?</comment>
   </data>
   <data name="MonsterStatsDisplay" xml:space="preserve">
