--- a/src/D2RLaunch/D2RLaunch/Culture/Resources.pt-BR.resx
+++ b/src/D2RLaunch/D2RLaunch/Culture/Resources.pt-BR.resx
@@ -390,7 +390,7 @@
     <comment>Mod files are current...no update needed!</comment>
   </data>
   <data name="ModUpdateRdy" xml:space="preserve">
-    <value>Atualização de mod disponível!\n\nGostaria de fazer um backup da sua pasta de mod antes de atualizar?</value>
+    <value>Atualização de mod disponível!\n\nGostaria de fazer um backup deste mod antes de atualizar?</value>
     <comment>Mod Update Available!\n\nWould you like to make a backup of your mod folder before updating?</comment>
   </data>
   <data name="MonsterStatsDisplay" xml:space="preserve">
