--- a/src/D2RLaunch/D2RLaunch/Culture/Resources.ru.resx
+++ b/src/D2RLaunch/D2RLaunch/Culture/Resources.ru.resx
@@ -390,7 +390,7 @@
     <comment>Mod files are current...no update needed!</comment>
   </data>
   <data name="ModUpdateRdy" xml:space="preserve">
-    <value>Доступно обновление мода!\n\nХотите ли вы сделать резервную копию папки мода перед обновлением?</value>
+    <value>Доступно обновление мода!\n\nХотите ли вы сделать резервную копию этого мода перед обновлением?</value>
     <comment>Mod Update Available!\n\nWould you like to make a backup of your mod folder before updating?</comment>
   </data>
   <data name="MonsterStatsDisplay" xml:space="preserve">
