--- a/src/D2RLaunch/D2RLaunch/Culture/Resources.zh-TW.resx
+++ b/src/D2RLaunch/D2RLaunch/Culture/Resources.zh-TW.resx
@@ -390,7 +390,7 @@
     <comment>Mod files are current...no update needed!</comment>
   </data>
   <data name="ModUpdateRdy" xml:space="preserve">
-    <value>Mod 更新可用！\n\n您想在更新之前備份您的 Mod 文件夾嗎？</value>
+    <value>Mod 更新可用！\n\n您想在更新之前備份此 Mod 嗎？</value>
     <comment>Mod Update Available!\n\nWould you like to make a backup of your mod folder before updating?</comment>
   </data>
   <data name="MonsterStatsDisplay" xml:space="preserve">
