Expanded Options Start

--- a/src/D2RLaunch/D2RLaunch/Culture/Resources.en.resx
+++ b/src/D2RLaunch/D2RLaunch/Culture/Resources.en.resx
@@ -261,6 +261,26 @@
     <value>Enabled (No Orbs)</value>
     <comment>Enabled (No Orbs)</comment>
   </data>
+  <data name="Expanded" xml:space="preserve">
+    <value>Expanded Storage Options</value>
+    <comment>Expanded Options</comment>
+  </data>
+  <data name="ExpandedCube" xml:space="preserve">
+    <value>Cube</value>
+    <comment>Expanded Cube</comment>
+  </data>
+  <data name="ExpandedInventory" xml:space="preserve">
+    <value>Inventory</value>
+    <comment>Expanded Inventory</comment>
+  </data>
+  <data name="ExpandedMerc" xml:space="preserve">
+    <value>Mercenary</value>
+    <comment>Expanded Mercenary</comment>
+  </data>
+  <data name="ExpandedStash" xml:space="preserve">
+    <value>Stash</value>
+    <comment>Expanded Stash</comment>
+  </data>
   <data name="Experience" xml:space="preserve">
     <value>Exp Rate</value>
     <comment>Exp Rate:</comment>
