Color Dye QoL Options + Begin Dynamic HP Bar
- Color Dye System added under QoL Options; still needs preview, culture strings and remodded disable
- Dynamic Monster HP structure laid out; still missing UI edit and code execution. Currently hidden due to UI issue.

--- a/src/D2RLaunch/D2RLaunch/Culture/Resources.en.resx
+++ b/src/D2RLaunch/D2RLaunch/Culture/Resources.en.resx
@@ -193,6 +193,10 @@
     <value>Champion Packs</value>
     <comment>Champion Packs:</comment>
   </data>
+  <data name="ColorDye" xml:space="preserve">
+    <value>Color Dyes</value>
+    <comment>Color Dyes</comment>
+  </data>
   <data name="Community" xml:space="preserve">
     <value>Community</value>
     <comment>Community</comment>
