Color Dye Update + ReMoDDeD Disabled
- Updated Color Dye System to write new string info to newly created stats
- Updated Color Dyes and Expanded Storage systems to be disabled for ReMoDDeD; as they are already active.

--- a/src/D2RLaunch/D2RLaunch/Culture/Resources.en.resx
+++ b/src/D2RLaunch/D2RLaunch/Culture/Resources.en.resx
@@ -194,7 +194,7 @@
     <comment>Champion Packs:</comment>
   </data>
   <data name="ColorDye" xml:space="preserve">
-    <value>Color Dyes</value>
+    <value>Item Color Dyes</value>
     <comment>Color Dyes</comment>
   </data>
   <data name="Community" xml:space="preserve">
